pxc/tests/test_01_px/constinh3.px
namespace constinh3;
import test_common "";


interface ifoo {
  function int mfoo(long v);
}

struct sfoo : ifoo : {
  function int mfoo(long v) const { // error: constness
    return 3 + v;
  }
}

ptr{sfoo} p = ptr{sfoo}(sfoo());
ptr{ifoo} ip = p;
println(ip->mfoo(3));

